testdata/zkc/invalid/constant_invalid_01.zkc
;;error:2:18-21:bit overflow (u9 into u8)
const LARGE:u8 = 256
